--- a/local/css/settings.css
+++ b/local/css/settings.css
@@ -220,6 +220,9 @@
   margin: 0.1em 0;
   background-image: url(../img/button/cross.png);
 }
+.settings-btn.delete.double-check{
+  background-color: #EC3535;
+}
 .settings-btn.rename {
   height: auto;
 }
@@ -331,7 +334,7 @@
   padding: 1em;
   margin: 0.15em;
   display: inline-block;
-  min-width: 65%;
+  width: 100%;
   color: #fff;
 }
 
@@ -362,7 +365,7 @@
 
 .upload-avatar {
   background: #006BB7 url(../img/button/upload-white.png) 10% 50% no-repeat;
-  text-indent: 2em;
+  text-indent: 4em;
   padding: 0.75em 1.5em;
   margin: 0;
   width: 100%;
@@ -374,5 +377,10 @@
     bottom: 0;
     left: 0;
     right: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .account-settings-wrap{
+    width: 75%;
   }
 }
