--- a/local/css/scenes.css
+++ b/local/css/scenes.css
@@ -84,9 +84,10 @@
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
 }
-.scene-quick-schedule-btn:hover{
+.scene-quick-schedule-btn:hover {
   opacity: 1;
 }
+
 /* END SCENE BOX CSS */
 
 .new-scene {
@@ -160,8 +161,14 @@
   -webkit-animation: popUp 0.35s ease;
   animation: popUp 0.35s ease;
 }
+.scene-device-btn:hover {
+  background-image: url(../img/button/cross.png);
+  background-repeat: no-repeat;
+  background-position: 95% 15%;
+  background-size: 0.5em;
+}
 @media screen and (min-width: 600px) {
-  .scene-box{
+  .scene-box {
     width: 18em;
     margin: 1%;
   }
