--- a/local/css/schedule.css
+++ b/local/css/schedule.css
@@ -2,6 +2,7 @@
   position: relative;
   background-color: #102B42;
   color: #fff;
+  margin: 0.5% 0;
 }
 .schedule-wrap p {
   margin: 1em 0.25em;
