--- a/local/css/security.css
+++ b/local/css/security.css
@@ -65,41 +65,41 @@
 
 .cam-rec-wrap {
   position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-flex-flow: column nowrap;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  width: 95%;
+  display: inline-block;
+  height: 10em;
+  width: 90%;
   margin: 1% auto;
-  background-color: #14334B;
-  color: #fff;
-  box-shadow: 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.25);
-  border-radius: 0.25em;
-  text-indent: 0.25em;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
-.cam-rec-wrap > span:last-child > i {
+.cam-rec-wrap > img {
+  width: 100%;
+  height: 100%;
+}
+.cam-rec-wrap > i:first-of-type {
+  opacity: 0;
+  font-size: 5em;
+  top: 0.5em;
+  left: 40%;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+.cam-rec-wrap:hover > i:first-of-type {
+  opacity: 0.8;
+}
+.cam-rec-wrap > span {
+  position: absolute;
+  bottom: 0em;
+  left: 0.25em;
+}
+.cam-rec-wrap > a {
+  position: absolute;
+  bottom: 0em;
+  right: 2.5em;
+}
+.cam-rec-wrap > i {
   cursor: pointer;
-  opacity: 0.55;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-}
-.cam-rec-wrap > span > i:hover {
-  opacity: 1;
+  position: absolute;
+  bottom: 0.25em;
+  right: 0.25em;
 }
 
 /* END */
@@ -144,7 +144,6 @@
 }
 .close-live-stream-modal:hover {
   -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
   transform: scale(1.1);
 }
 .camera-live-stream {
@@ -214,14 +213,14 @@
     width: 18em;
   }
   .cam-rec-wrap {
-    -webkit-flex-flow: row nowrap;
-    -ms-flex-flow: row nowrap;
-    flex-flow: row nowrap;
-    height: 3em;
+    width: 17em;
+  }
+  .cam-rec-wrap > i:first-of-type {
+    left: 1.25em;
   }
 }
 @media screen and (min-width: 992px) {
-  .camera-wrap {
+  .camera-wrap, .cam-rec-wrap {
     margin: 1%;
   }
 }
