Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@136539 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/css/devices/alarm.css
+++ b/local/css/devices/alarm.css
@@ -1,5 +1,6 @@
 .alarm-device-wrap {
   position: relative;
+  display: inline-block;
   width: 18em;
   border-radius: 0.25em;
   overflow: hidden;
