--- a/local/css/security.css
+++ b/local/css/security.css
@@ -2,6 +2,7 @@
 
 .camera-wrap {
   position: relative;
+  display: inline-block;
   background-color: #20517F;
   min-width: 18em;
   width: 90%;
@@ -57,6 +58,25 @@
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
+.camera-dropdown-wrap {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.camera-dropdown-wrap > i {
+  cursor: pointer;
+}
+.camera-dropdown-wrap > ul {
+  background-color: #224764
+}
+.camera-dropdown-wrap > ul > li {
+  cursor: pointer;
+  padding: 1% 3%;
+}
+.camera-dropdown-wrap > ul > li:hover{
+  background: rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease;
+}
 
 /* END */
 
@@ -110,21 +130,25 @@
 }
 .template-nav-toggle-btn {
   cursor: pointer;
-  padding: 0 1em;
+  padding: 0 0.5em;
 }
 .active-line-indicator {
   position: absolute;
   bottom: 0;
   left: 5%;
-  width: 45%;
+  width: 24%;
   border: 0.1em solid #1272CD;
   box-shadow: 0.1em 0.1em 0.5em #1272CD;
   -webkit-transition: all 0.35s ease;
   transition: all 0.35s ease;
 }
-.active-line-indicator.alarm-active {
-  left: 60%;
-  width: 35%;
+.active-line-indicator.rec {
+  left: 38%;
+  width: 29%;
+}
+.active-line-indicator.alarm {
+  left: 76%;
+  width: 20%;
 }
 .recorings-wrap {
   color: #fff;
@@ -148,6 +172,19 @@
 }
 .camera-live-stream {
   width: 100%;
+}
+.stream-key{
+  position: absolute;
+  top: 50%;
+  font-size: 2em;
+  cursor: pointer;
+  transition: all 0.35s ease;
+}
+.stream-key.right{
+  right: 0em;
+}
+.stream-key.left{
+  left: 0em;
 }
 .camera-live-stream:-webkit-full-screen {
   position: fixed;
@@ -222,6 +259,9 @@
 @media screen and (min-width: 992px) {
   .camera-wrap, .cam-rec-wrap {
     margin: 1%;
+  }
+  .stream-key{
+    font-size: 4em;
   }
 }
 @media screen and (min-width: 1200px) {}
