--- a/local/css/style.css
+++ b/local/css/style.css
@@ -174,6 +174,10 @@ button:focus {
   border: 0.1em solid #446B8D;
   color: #fff;
   text-indent: 0.5em;
+  transition: all 0.5s ease;
+}
+.form-number.success{
+  background-color: #00E676;
 }
 .form-date {
   height: 2.5em;
@@ -338,6 +342,9 @@ input:disabled ~ label, input:disabled {
 }
 .margin-auto {
   margin: auto;
+}
+.green-bg{
+  background-color: #00E676;
 }
 .color-red {
   color: #EC3535;
