Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@136997 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/css/style.css
+++ b/local/css/style.css
@@ -312,7 +312,7 @@ input:disabled ~ label, input:disabled {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 1%;
+  padding: 2% 1%;
 }
 .dashboard-display-wrap{
   position: relative;
