--- a/local/css/devices/remotes.css
+++ b/local/css/devices/remotes.css
@@ -106,6 +106,9 @@
 .remote-full-col > div {
   margin: 0.1em;
 }
+.numpad-wrap{
+  margin: 0.55em;
+}
 .remote-top-btn {
   height: 2.5em;
   width: 100%;
