--- a/local/css/security.css
+++ b/local/css/security.css
@@ -21,7 +21,7 @@
   bottom: 0;
   opacity: 0.4;
 }
-.camera-wrap:hover h4 {
+.camera-wrap:hover h4, .camera-wrap:hover .camera-live-stream-btn {
   opacity: 0.9;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
@@ -36,6 +36,15 @@
   text-indent: 0.5em;
   margin: 10% 5%;
   width: 90%;
+}
+.camera-live-stream-btn {
+  position: absolute;
+  font-size: 5em;
+  text-align: center;
+  bottom: 0.5em;
+  left: 2em;
+  opacity: 0;
+  cursor: pointer;
 }
 .camera-live-tumb-btn {
   position: absolute;
@@ -73,7 +82,7 @@
   cursor: pointer;
   padding: 1% 3%;
 }
-.camera-dropdown-wrap > ul > li:hover{
+.camera-dropdown-wrap > ul > li:hover {
   background: rgba(0, 0, 0, 0.5);
   transition: all 0.3s ease;
 }
@@ -94,7 +103,11 @@
   width: 100%;
   height: 100%;
 }
-.cam-rec-wrap > i:first-of-type {
+.cam-rec-wrap i {
+  cursor: pointer;
+}
+.cam-rec-play {
+  position: absolute;
   opacity: 0;
   font-size: 5em;
   top: 0.5em;
@@ -102,15 +115,22 @@
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
-.cam-rec-wrap:hover > i:first-of-type {
+.cam-rec-wrap:hover > .cam-rec-play {
   opacity: 0.8;
 }
-.cam-rec-wrap > span {
+.cam-rec-info {
   position: absolute;
   bottom: 0em;
   left: 0.25em;
 }
-.cam-rec-wrap > a {
+.cam-rec-actions {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 0 0.25em;
+}
+
+/*.cam-rec-wrap > a {
   position: absolute;
   bottom: 0em;
   right: 2.5em;
@@ -120,7 +140,8 @@
   position: absolute;
   bottom: 0.25em;
   right: 0.25em;
-}
+}*/
+
 
 /* END */
 
@@ -173,17 +194,17 @@
 .camera-live-stream {
   width: 100%;
 }
-.stream-key{
+.stream-key {
   position: absolute;
   top: 50%;
   font-size: 2em;
   cursor: pointer;
   transition: all 0.35s ease;
 }
-.stream-key.right{
+.stream-key.right {
   right: 0em;
 }
-.stream-key.left{
+.stream-key.left {
   left: 0em;
 }
 .camera-live-stream:-webkit-full-screen {
@@ -255,12 +276,15 @@
   .cam-rec-wrap > i:first-of-type {
     left: 1.25em;
   }
+  .camera-live-stream-btn {
+    left: 1.40em;
+  }
 }
 @media screen and (min-width: 992px) {
   .camera-wrap, .cam-rec-wrap {
     margin: 1%;
   }
-  .stream-key{
+  .stream-key {
     font-size: 4em;
   }
 }
