--- a/local/css/frame.css
+++ b/local/css/frame.css
@@ -858,6 +858,32 @@
 .most-used-dev-wrap {
   width: 100%;
 }
+.dashboard-alarm-toggle {
+  background: #071928 center no-repeat;
+  width: 2.5em;
+  height: 2.5em;
+  border: 0.1em solid #133856;
+}
+.dashboard-alarm-toggle:first-of-type{
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-right: none;
+}
+.dashboard-alarm-toggle:last-of-type{
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-left: none;
+}
+.dashboard-alarm-toggle.active {
+  background-color: #1986d9;
+  border-radius: 4px;
+}
+.dashboard-alarm-toggle.alarm-off {
+  background-image: url(../img/button/alarm-off.png);
+}
+.dashboard-alarm-toggle.alarm-on {
+  background-image: url(../img/button/alarm-on.png);
+}
 @media screen and (min-width: 410px) {
   .frame-content-wrap {
     height: 88%;
@@ -917,6 +943,10 @@
   }
   .most-used-dev-wrap {
     margin: 1%;
+  }
+  .dashboard-alarm-toggle {
+    width: 3em;
+    height: 3em;
   }
 }
 @media screen and (min-width: 1200px) {
